syntax = "proto3";

package post;

message ReqPost {
  string id = 1;
  string title = 2;
  string image_url = 3;
  string owner_id = 4;
}

message RespPost {
  string id = 1;
  string title = 2;
  string image_url = 3;
  string owner_id = 4;
  Owner owner = 5;
  repeated Comment comments = 6;
}

message Owner {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  int64 age = 4;
  Gender gender = 5;
}

enum Gender {
  male = 0;
  female = 1;
}

message Comment {
  string id = 1;
  string content = 2;
  string owner_id = 3;
  string post_id = 4;
  string created_at = 5;
  string updated_at = 6;
  string deleted_at = 7;
}

message GetPostId {
  string post_id = 1;
}

message GetOwnerId {
  string owner_id = 1;
}

message OwnerPosts {
  repeated ReqPost posts = 1;
}

service PostService {
  rpc CreatePost(ReqPost) returns (RespPost);
  rpc GetPostById(GetPostId) returns (RespPost);
  rpc GetPostsByOwnerId(GetOwnerId) returns (OwnerPosts);
}